--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-on: 
- pull_request:
-  types: [closed] 
+on:
+  push:
+    branches:
+      - 'main'
 jobs:
   repo-sync:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - name: repo-sync
