--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - 'main'
 jobs:
-  repo-sync:
+  glitch-sync:
     runs-on: ubuntu-latest
     steps:
     - name: repo-sync
