--- a/.github/workflows/glitchsync.yml
+++ b/.github/workflows/glitchsync.yml
@@ -6,7 +6,7 @@ jobs:
   glitch-sync:
     runs-on: ubuntu-latest
     steps:
-    - name: repo-sync
+    - name: glitch-sync
       uses: wei/git-sync@v1
       env:
         SOURCE_REPO: "https://github.com/dansakamoto/impossible-day-3a.git"
